Fix box-shadow on iOS, maybe

--- a/river.css
+++ b/river.css
@@ -35,7 +35,7 @@ body, .search {
 }
 
 .search, .control {
-	box-shadow: 0 0 10px #eee;
+	box-shadow: 0 0 10px grey;
 }
 
 .songs {
